src/app/main-page/landing-page/landing-page.scss
@property --angle {
    syntax: '<angle>';
    initial-value: 0deg;
    inherits: false;
}

#background_div {
    width: 100%;
    background: linear-gradient(to top right, #1C1C1C 40%, #08463B);
    display: flex;
    justify-content: center;
}

.landing_page {
    width: 100%;
    max-width: 1920px;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-attachment: fixed;
    background-repeat: no-repeat;
    color: #ffffff;
    overflow: hidden;
}

#header {
    position: absolute;
    inset: 0;
    height: 120px;
}

#name_title {
    min-height: calc(100vh - 150px);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
        >p {
            font-size: 40px;
            font-family: 'Fira Code';
        }
        >h1 {
            font-size: 128px;
            font-weight: 700;
        }
}

#banner {
    width: 100%;
    height: 62px;
    background: rgba(105, 103, 103, 0.4);
    rotate: 358deg;
    overflow: hidden;
    display: flex;
    align-items: center;
    backdrop-filter: blur(4px);
    border-radius: 8px;
    z-index: 20;
}

#info {
    width: 100%;
    overflow: hidden;
}

.scroll-container {
    display: flex;
    width: max-content;
    animation: marquee 20s linear infinite;
}

.scroll-content {
    display: flex;
    flex-shrink: 0;
    align-items: center;
    gap: 16px;
    padding-right: 16px; 
}

.scroll-content span {
    font-size: 32px;
    color: rgba(61, 207, 182, 1);
    white-space: nowrap;
}

@keyframes marquee {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(-25%);
    }
}


.scroll-container:hover {
    animation-play-state: paused;
}

#info_content {
    display: inline-block;
    animation: scroll 20s linear infinite;
    >span {
        display: inline-block;
        margin-right: 16px;
        font-size: 32px;
        color: rgba(61, 207, 182, 1);;
    }
}

@keyframes scroll {
  0% {
    transform: translateX(50%);
  }
  100% {
    transform: translateX(-50%);
  }
}

#decoration_landing {
    width: 100%;
    max-width: 1920px;
    position: absolute;
    bottom: 0;
    display: flex;
    justify-content: space-between;
    padding-left: 128px;
    padding-right: 128px;
    z-index: 0;
}

#right_decoration {
    width: 24px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    gap: 16px;
    >a {
        color: white;
        text-decoration: none;
    }
}

.link_icons {
    width: 48px;
    height: 48px;
}

#hidden_mail {
    display: none;
    cursor: pointer;
}

#mail_adress {
    position: absolute;
    bottom: 350px;
    transform: rotate(-90deg) translateY(-15px);
    transform-origin: left top;
    font-size: 24px;
}

#right_line {
    width: 1px;
    border: 1px solid white;
    height: 200px;
}

#left_decoration {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    gap: 32px;
    >div {
        width: 35px;
        height: 72px;
        border: 1px solid rgba(61, 207, 182, 1);
        border-radius: 16px;
        display: flex;
        justify-content: center;
        align-items: center;
        >img {
            animation: floatArrow 3s ease-in-out infinite;
            
            @keyframes floatArrow {
                0%, 100% {
                    transform: translateY(20px)
                }
                50% {
                    transform:translateY(-20px);
                }
            }
        }
    }
}

#left_line {
    width: 1px;
    border: 1px solid rgba(61, 207, 182, 1);
    height: 400px;
}

.link_buttons {
    display: flex;
    gap: 32px;
}

.button_lp {
    position: relative;
    z-index: 1;
    width: 174px;
    height: 50px;
    margin-top: 8px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    color: white;
    font-size: 16px;
    &:hover {
        scale: 1.1;
    }
}

.button_lp a{
    position: relative;
}

.button_lp::after, .button_lp::before {
    content: "";
    position: absolute;
    inset: 0;
    background-image: conic-gradient(from var(--angle), transparent 40%, rgba(61, 207, 182, 1));
    z-index: 1;
    padding: 10px;
    border-radius: 10px;
    animation: 3s spin linear infinite
}

.button_lp::before {
    filter: blur(1.5rem)
    opacity(1)
}

.button_lp button{
    width: 172px;
    height: 48px;
    background: linear-gradient(to top right, #1C1C1C 40%, #08463B);
    color: white;
    border: none;
    border-radius: 10px;
    z-index: 2;
    cursor: pointer;
}

@keyframes spin {
    from {
        --angle: 0deg;
    }
    to {
        --angle:360deg;
    }
}

@media (max-width: 1250px) {
    #right_line {
        height: 130px;
    }

    #left_line {
        height: 180px;
    }

    #left_decoration {
        gap: 16px
    }

    #mail_adress {
        display: none;
    }

    #hidden_mail {
        display: flex;
    }

    #decoration_landing {
        padding-left: 32px;
        padding-right: 32px;
    }
}

@media (max-width: 900px) {
    #name_title {
        >p {
            font-size: 20px;
        }
        >h1 {
            font-size: 64px;
        }
    }
}

@media (max-width: 500px) {
    #name_title {
        >p {
            font-size: 16px;
        }
        >h1 {
            font-size: 45px;
        }
    }
    
    .link_buttons {
        display: flex;
        flex-direction: column;
    }
}

